tests/compilefail82.pas
program compilefail82(output);
var fred:integer;
begin
  fred:=(4 * -3);
end.

